# commonqt

./: CMakeLists.txt  README.txt  commonqt.cpp  commonqt.pro
instructions/: instructions to build commonqt5 on  win 10.txt  instructions to build commonqt5 on linux.txt
